tests/paczka1/fuzzy1/87236000.err
Error in line 5: LiWzEkJW8q S61 1,7
Error in line 6: LiWzEkJW8q S965 48,9
Error in line 7: LiWzEkJW8q S998 40,8
Error in line 9: bAcYxbQV S998 4,3
Error in line 16: S965 A649 75,77
Error in line 14: HQN A649 36,6
Error in line 18: HQN S61 22,4
